Created first integration test